--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,4 +1,17 @@
 <% layout("/layouts/boilerplate") %>
+<% if (success_msg) { %>
+    <div class="alert alert-success">
+      <%= success_msg %>
+    </div>
+  <% } %>
+
+  <!-- Error Flash Message -->
+  <% if (error_msg) { %>
+    <div class="alert alert-danger">
+      <%= error_msg %>
+    </div>
+  <% } %>
+
 
 <div class="row mt-3">
     <h3 class="col-6 offset-3">Signup on InfluencerHub</h3>
