--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -55,7 +55,7 @@
           </div>
           <a href="/logout" class="btn btn-danger">Logout</a>
 
-          <a href="/premium" class="btn" style="background-color: rgb(233, 41, 41); color: white; padding: 2px 6px; border-radius: 10px; font-weight: bold;">Premium</a>
+          <a href="/premium" class="btn" style=" margin-left: 20px; background-color: rgb(233, 41, 41); color: white; padding: 2px 6px; border-radius: 10px; font-weight: bold;">Premium</a>
         </div>
 
       </div>
