--- a/views/influencer/Home.ejs
+++ b/views/influencer/Home.ejs
@@ -19,7 +19,7 @@
         <div class="col-md-4">
           <div class="card">
             <div class="card-body text-center">
-              <img src="/profilePic/<%= profilePic %>" class="rounded-circle mb-3" alt="Profile Picture" width="150" height="150">
+              <img src="/images/<%= profilePic %>" class="rounded-circle mb-3" alt="Profile Picture" width="150" height="150">
               <h5 class="card-title"><%= username %></h5>
               <a href="/user/profile" class="btn btn-primary action-btn">Update Profile</a>
             </div>
