--- a/views/Flistings/index.ejs
+++ b/views/Flistings/index.ejs
@@ -14,7 +14,7 @@
                   <!-- Card Body -->
                   <div class="card-body">
                     <p class="card-text">
-                      <b><%= freelancer.name %></b> <br>
+                      <b><%= freelancer.username %></b> <br>
                       <%= freelancer.role %> <br>
                       <strong>Skills:</strong>
                       <% freelancer.skills.forEach(skill => { %>
