--- a/views/Flistings/show.ejs
+++ b/views/Flistings/show.ejs
@@ -24,7 +24,7 @@
           </div>
           <!-- Connect Button -->
           <div class="text-center mt-3">
-            <a href="/freelancer/connect/<%= freelancer._id %>" class="btn btn-success">Connect</a>
+            <a href="/chat/<%= freelancer.username %>" class="btn btn-success">Connect</a>
           </div>
         </div>
       </div>
