--- a/views/company/home.ejs
+++ b/views/company/home.ejs
@@ -78,7 +78,7 @@
                                 <a href="https://youtube.com/<%= influencer.socialMedia.youtube %>" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
                                 <a href="https://facebook.com/<%= influencer.socialMedia.facebook %>" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
                             </div>
-                            <button class="btn btn-success">Approach</button>
+                            <button class="btn btn-success">+ Connect</button>
                         </div>
                     </div>
                 </div>
