--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -46,7 +46,10 @@
             <!-- Submit Button -->
             <button class="col-6 offset-3 btn btn-primary">Login</button>
             <br><br>
-            <p></p>
+            
+            <p style="margin-left: 40px;">
+              Don't have an account? <a href="http://localhost:8080/signup" class="btn btn-link">Create an account - Signup</a>
+            </p>
         </form>
     </div>
 </div>
